# spotify-playlist-utility

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  config.ini  install_requirements_per_setup_cfg.py  main.py  pyproject.toml  setup.cfg  tox.ini
docs/: docs_procedures.md
docs/source/: conf.py  index.rst  modules.rst  spotify_playlist_utility.rst
examples/: import_csv_example.csv
src/spotify_playlist_utility/: Spotify.py  Track.py  TrackLists.py  __main__.py
tests/: test_Main.py
