[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
# Defines package dependencies required for build-system, not final product executable.
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"