[metadata]
name = spotify-playlist-utility
version = 0.0.1
author = Ryan Warrick
author_email = ryanwarrick1@gmail.com
description = Python utility to manipulate, and report on, Spotify playlists.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires = 
    spotipy
    requests

[options.packages.find]
where = src