[metadata]
name = spotify-playlist-utility
version = 0.0.1
author = Ryan Warrick
author_email = ryanwarrick1@gmail.com
description = Python utility to manipulate, and report on, Spotify playlists.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Natural Language :: English
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires = 
    spotipy
    requests

[options.packages.find]
where = src

[build_sphinx]
project = 'Spotify-Playlist-Utility'
version = 0.1
release = 0.1.1
source-dir = 'docs'
