[metadata]
name = spotify-playlist-utility
version = 0.0.3
author = Ryan Warrick
author_email = ryanwarrick1@gmail.com
description = Python utility to manipulate, and report on, Spotify playlists.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
url = https://github.com/ryanwarrick/spotify-playlist-utility
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires = 
    spotipy
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    spotify-playlist-utility=spotify_playlist_utility.__main__:main

[build_sphinx]
project = 'spotify-playlist-utility'
version = 0.1
release = 0.1.1
source-dir = 'docs'
